--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script
-      src="https://dev-biocertica-api.s3.af-south-1.amazonaws.com/js/integration-snippet.js"
+  <script
+      src="https://biocertica-api.s3.af-south-1.amazonaws.com/js/integration-snippet-dev.js"
       async
       defer
     ></script>
