--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script
-            src="https://dev-biocertica-api.s3.af-south-1.amazonaws.com/js/integration-snippet.js"
-            async
-            defer
-        ></script>
+<script
+      src="https://biocertica-api.s3.af-south-1.amazonaws.com/js/integration-snippet-dev.js"
+      async
+      defer
+    ></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat" />
         <script
             src="https://code.jquery.com/jquery-3.6.1.js"
