--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         function initClient() {
             console.log('initClient');
             bapi.init('7d9eb7ef-bc6c-4e0a-a42f-445a90eead9d', window.location.href.split('?')[0], 'pkce', 'code');
-
+            debugger;
             bapi.getProfile().then((profileData) => {
+                debugger;
                 if (bapi && bapi.profile && bapi.profile.genetic) {
                     bapi.getGenetic().then((geneticData) => {
                         document.getElementById('data-show').innerText = JSON.stringify(geneticData);
