--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
                 }
             });
         }
+        
+   setTimeout(() => {
+      initClient();
+    }, 2000);
     </script>
     <body>
         <div class="container">
