--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <head>
-    <meta name="biocertica-signin-workspace-id" content="6e2bdb81-580e-456e-8ce4-f2ceca4d3fda" /> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
@@ -66,7 +65,7 @@
 <script>
     function initClient() {
 
-        console.log('initClient');
+        console.log('initClient', bapi);
         bapi.init(
                 "6e2bdb81-580e-456e-8ce4-f2ceca4d3fda",
                 window.location.href.split("?")[0],
@@ -91,6 +90,23 @@
 
             });
         });
+            // bapi.getProfile().then(() => {
+            //     if ((bapi) && (bapi.profile) && (bapi.profile.genetic)) {
+            //         bapi.getGenetic().then(() => {
+            //             var formData = {
+            //                 Genetic: bapi.genetic,
+            //                 Profile: bapi.profile,
+            //                 Ancestry: bapi.ancestry,
+            //                 Nutrition: bapi.nutrition
+            //             };
+            //             document.getElementById("results").innerText=JSON.stringify(formData);
+            //         });
+            //     }
+            //     else {
+            //          //window.location = 'BioCerticaRequirements';
+            //     }
+
+            // });
     };
 
     
